infra/platform/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: registry
---
apiVersion: v1
kind: Namespace
metadata:
  name: public-tunnel
